おちかくの

--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
             <p>どちらのピアノを選んでも、それは自分の成長を応援する<strong>素晴らしい選択</strong>です。</p>
             <p>このガイドが、あなたの電子ピアノ選びの不安を解消し、ピアノ生活の第一歩につながることを願っています。</p>
             <p style="font-size: 18px; font-weight: bold; color: var(--text-dark); margin-top: 30px;">さあ、次は楽器店で<strong>実機を弾き比べ</strong>てみましょう！</p>
-            <a href="#" class="cta-button" style="margin-top: 25px;">楽器店を探す</a>
+            <a href="https://jp.yamaha.com/find/dealers/?cid=719493" class="cta-button" style="margin-top: 25px;">楽器店を探す</a>
         </div>
     </section>
 
