--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                     <tr>
                         <th>比較項目</th>
                         <th>ARIUS (アリウス) YDP-165クラス</th>
-                        <th>Clavinova (クラビノーバ) CLP-735クラス</th>
+                        <th>Clavinova (クラビノーバ) CLP-835クラス</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -856,7 +856,7 @@
                     <tr>
                         <th>比較項目</th>
                         <th>ARIUS (アリウス) YDP-165クラス</th>
-                        <th>Clavinova (クラビノーバ) CLP-735クラス</th>
+                        <th>Clavinova (クラビノーバ) CLP-835クラス</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -897,7 +897,7 @@
                     <tr>
                         <th>比較項目</th>
                         <th>ARIUS (アリウス) YDP-165クラス</th>
-                        <th>Clavinova (クラビノーバ) CLP-735クラス</th>
+                        <th>Clavinova (クラビノーバ) CLP-835クラス</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -983,7 +983,7 @@
             <div class="conclusion-card">
                 <h3>🎹 Bが多い場合</h3>
                 <p><strong>迷わず「クラビノーバ」へ！</strong></p>
-                <p><strong>ヤマハ Clavinova (クラビノーバ) CLP-735</strong></p>
+                <p><strong>ヤマハ Clavinova (クラビノーバ) CLP-835</strong></p>
                 <div class="price">176,000円（税込送料別）</div>
                 <p><strong>おすすめの理由：</strong></p>
                 <p><strong>表現力豊かな音と鍵盤</strong>を持っています。特にペダルの響きをリアルに再現するVRM技術は、より豊かな音の表現力を実現します。<strong>「もっと良いピアノだったら…」という失敗を完全に防げます。</strong></p>
@@ -1019,7 +1019,7 @@
                 <div class="store-card">
                     <div class="store-header">
                         <h3>🏪 ケーズデンキ 守山店</h3>
-                        <span class="store-badge">YDP・CLP</span>
+                        <span class="store-badge">YDP165</span>
                     </div>
                     <p class="store-address"><a href="https://www.google.com/maps/search/?api=1&query=〒524-0012+滋賀県守山市播磨田町200-1" target="_blank">〒524-0012 滋賀県守山市播磨田町200-1</a></p>
                     <p class="store-tel"><a href="tel:077-514-2227">TEL: 077-514-2227</a></p>
@@ -1028,7 +1028,7 @@
                 <div class="store-card">
                     <div class="store-header">
                         <h3>🏪 ケーズデンキ 草津栗東店</h3>
-                        <span class="store-badge">YDP・CLP</span>
+                        <span class="store-badge">YDP165</span>
                     </div>
                     <p class="store-address"><a href="https://www.google.com/maps/search/?api=1&query=〒520-3024+滋賀県栗東市小柿7丁目8番9号" target="_blank">〒520-3024 滋賀県栗東市小柿7丁目8番9号</a></p>
                     <p class="store-tel"><a href="tel:077-554-3300">TEL: 077-554-3300</a></p>
@@ -1037,7 +1037,7 @@
                 <div class="store-card highlight">
                     <div class="store-header">
                         <h3>🎵 JEUGIA 草津A・SQUARE店</h3>
-                        <span class="store-badge clavinova">Clavinova</span>
+                        <span class="store-badge clavinova">YDP165・CLP835他</span>
                     </div>
                     <p class="store-address"><a href="https://www.google.com/maps/search/?api=1&query=〒525-0025+滋賀県草津市西渋川1丁目23-23+A・SQUARE+SARA南館2階" target="_blank">〒525-0025 滋賀県草津市西渋川1丁目23-23 A・SQUARE SARA南館2階</a></p>
                     <p class="store-tel"><a href="tel:077-561-6570">TEL: 077-561-6570</a></p>
@@ -1046,7 +1046,7 @@
                 <div class="store-card">
                     <div class="store-header">
                         <h3>🏪 ジョーシン 草津店</h3>
-                        <span class="store-badge">YDP・CLP</span>
+                        <span class="store-badge">YDP165</span>
                     </div>
                     <p class="store-address"><a href="https://www.google.com/maps/search/?api=1&query=〒525-0051+滋賀県草津市木川町389" target="_blank">〒525-0051 滋賀県草津市木川町389</a></p>
                     <p class="store-tel"><a href="tel:077-565-4711">TEL: 077-565-4711</a></p>
@@ -1055,7 +1055,7 @@
                 <div class="store-card highlight">
                     <div class="store-header">
                         <h3>🎵 ロマン楽器</h3>
-                        <span class="store-badge clavinova">Clavinova</span>
+                        <span class="store-badge clavinova">YDP145・CLP835他</span>
                     </div>
                     <p class="store-address"><a href="https://www.google.com/maps/search/?api=1&query=〒525-0050+滋賀県草津市南草津5-3-3" target="_blank">〒525-0050 滋賀県草津市南草津5-3-3</a></p>
                     <p class="store-tel"><a href="tel:077-561-3808">TEL: 077-561-3808</a></p>
@@ -1064,7 +1064,7 @@
                 <div class="store-card">
                     <div class="store-header">
                         <h3>🏪 ケーズデンキ 草津南店</h3>
-                        <span class="store-badge">YDP・CLP</span>
+                        <span class="store-badge">YDP165</span>
                     </div>
                     <p class="store-address"><a href="https://www.google.com/maps/search/?api=1&query=〒525-0067+滋賀県草津市新浜町408" target="_blank">〒525-0067 滋賀県草津市新浜町408</a></p>
                     <p class="store-tel"><a href="tel:077-569-4342">TEL: 077-569-4342</a></p>
@@ -1073,7 +1073,7 @@
                 <div class="store-card highlight">
                     <div class="store-header">
                         <h3>🎵 島村楽器 イオンモール草津店</h3>
-                        <span class="store-badge clavinova">Clavinova</span>
+                        <span class="store-badge clavinova">YDP165・CLP8350</span>
                     </div>
                     <p class="store-address"><a href="https://www.google.com/maps/search/?api=1&query=〒525-0067+滋賀県草津市新浜町300イオンモール草津3F" target="_blank">〒525-0067 滋賀県草津市新浜町300イオンモール草津3F</a></p>
                     <p class="store-tel"><a href="tel:077-516-0860">TEL: 077-516-0860</a></p>
@@ -1082,7 +1082,7 @@
                 <div class="store-card highlight">
                     <div class="store-header">
                         <h3>🎵 石岡楽器</h3>
-                        <span class="store-badge clavinova">Clavinova</span>
+                        <span class="store-badge clavinova">CLP835</span>
                     </div>
                     <p class="store-address"><a href="https://www.google.com/maps/search/?api=1&query=〒523-0894+滋賀県近江八幡市中村町20-1" target="_blank">〒523-0894 滋賀県近江八幡市中村町20-1</a></p>
                     <p class="store-tel"><a href="tel:0748-33-1121">TEL: 0748-33-1121</a></p>
@@ -1091,7 +1091,7 @@
                 <div class="store-card">
                     <div class="store-header">
                         <h3>🏪 ケーズデンキ 西大津店</h3>
-                        <span class="store-badge">YDP・CLP</span>
+                        <span class="store-badge">YDP165</span>
                     </div>
                     <p class="store-address"><a href="https://www.google.com/maps/search/?api=1&query=〒520-0012+滋賀県大津市鏡が浜11番1号" target="_blank">〒520-0012 滋賀県大津市鏡が浜11番1号</a></p>
                     <p class="store-tel"><a href="tel:077-526-8736">TEL: 077-526-8736</a></p>
@@ -1100,7 +1100,7 @@
                 <div class="store-card">
                     <div class="store-header">
                         <h3>🏪 ジョーシン 近江八幡イオン店</h3>
-                        <span class="store-badge">YDP・CLP</span>
+                        <span class="store-badge">YDP165</span>
                     </div>
                     <p class="store-address"><a href="https://www.google.com/maps/search/?api=1&query=〒523-0891+滋賀県近江八幡市鷹飼町190-9+イオン近江八幡ショッピングセンター2番街3F" target="_blank">〒523-0891 滋賀県近江八幡市鷹飼町190-9 イオン近江八幡ショッピングセンター2番街3F</a></p>
                     <p class="store-tel"><a href="tel:0748-37-8911">TEL: 0748-37-8911</a></p>
